--- a/ecommerce/templates/registration/signup.html
+++ b/ecommerce/templates/registration/signup.html
@@ -12,6 +12,7 @@ Signup
 {% block body %}
     <br><br>
     <div class="container">
+        <br>
         {% if registered %}
             <h1>Thankyou for REGISTERING with us</h1>
             <br>
@@ -25,16 +26,32 @@ Signup
                 <div class="container sign-form">
                     {% csrf_token %}
                     
+                    <h4>
+
+                    <u>Account Information : </u>
+
+                    <br><br>
+
                     {{ user_form |as_bootstrap  }}
+                    
+                    <br>
+                    <hr>
+                    <br>
+                    <u><h4>Personal Information :</h4></u>
+                    <br>
+
                     {{ user_profileform |as_bootstrap  }}
+                    </h4>
 
+                    <br><br><br>
 
-                
                     <!-- {{ user_profileform.as_p }} -->
-                    <input type="submit" class = “btn btn-default” name="submit" value="submit">
+                    <input type="submit" class = "btn btn-primary" name="submit" value="Sign Up" style="margin: 0% 15%; width: 70%">
                 </div>
             </form>
         {% endif %}
     </div>
+    <br><br><br><br>
+
 
 {% endblock %}
