--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -65,6 +65,10 @@ html, body {
 	transform: scale(1.1);
 }
 
+.right-div-thumbnail{
+	height: 400px;
+}
+
 
 .container{
 	max-width: 100%;
@@ -83,12 +87,15 @@ html, body {
 	color: white;
 	border-radius: 11px;
 	height: max-content;
+	border: 3px solid #485463;
+	transition: 0.3s;
 }
 
 .maniplulate-button:hover{
 	transform: scale(1.1);
 	overflow: auto;
 	overflow-y: hidden;
+	border: 4px solid gold;
 }
 
 .product-display{
@@ -259,24 +266,29 @@ fieldset, label { margin: 0; padding: 0; }
 .sliderimg{
 	width:100%; /* or whatever width you want. */
 	max-width:100%;
-	height: 720px;
-	max-height: 720px;
+	height: 920px;
+	max-height: 920px;
 	display: inline-block;
 	
 	
 }
 
 .sliderimgrow{
+	height: 920px;
+	max-height: 920px;
 	transition: 0.25s;
 }
 
 .mySlides{
+	height: 920px;
+	max-height: 920px;
 	transition: 1s;
 }
 
 .sliderimgrow:hover{
 	background-color: #abb2bb;
-	border : 10px solid #485e79;
+	border-radius: 0px;
+	border: 2px solid #7999c4;
 }
 
 .pp-jumbo{
@@ -331,23 +343,37 @@ fieldset, label { margin: 0; padding: 0; }
 	color: #9399a0;
 	border-radius: 20px;
 	transition: 0.3s;
+	border: 2px solid black;
+	padding: 5px;
 }
 
 .salecontainer:hover{
+	border: 4px solid gold;
+}
+
+.sale-section{
+	transition: 0.3s;
+}
+
+.sale-section:hover{
 	color: #ccd5e1;
 	background-color: #485e79;
 	border : 10px solid #9399a0;
 }
 
 .fire-symbol{
-	transition: 1s;
+	transition: 2s;
+	animation-iteration-count: 1;
+	
 }
+
 
 .partnerbrandbox:hover{
 	transform: scale(1.1);
 }
 
-.salecontainer:hover .fire-symbol{
+.sale-section:hover .fire-symbol{
+		
 		color: #f5f5f5;
 		text-shadow:
 		0px -2px 4px #fff,
@@ -355,3 +381,14 @@ fieldset, label { margin: 0; padding: 0; }
 		0px -10px 20px #F90,
 		0px -20px 40px #C33;
 	}
+
+.swal-overlay {
+	background-color: rgba(0, 253, 194, 0.45);
+}
+
+
+/* search form label css */
+.control-label{
+	text-transform: uppercase;
+	font-size: large;
+}
