--- a/ecommerce/templates/cart/cart.html
+++ b/ecommerce/templates/cart/cart.html
@@ -64,7 +64,7 @@ Product-Home
             <br>
             <h4>Total items : {{cart_count}}</h4> <br>
             <h4>Total cost : ₹ {{totalcost}}</h4><br><br>
-            <a href="{% url 'orders:createorder' %}"><button class="btn btn-success" style="width: 100%;">Place Order</button></a>
+            <a href="{% url 'orders:createorder' %}"><button class="btn btn-outline-success" style="width: 100%;" onclick="return confirm('Are you sure you want to place the order?')">Place Order</button></a>
         </div>
         
 
@@ -218,7 +218,7 @@ Product-Home
                 <hr>
                 <br>
                 <a href="{% url 'homepage:home' %}"><button class="btn btn-primary" style="width: 80%; margin: 0 10%;"> CONTINUE SHOPPING </button><br><br></a>
-                <a href="{% url 'orders:createorder' %}"><button class="btn btn-success" style="width: 80%; margin: 0 10%;"> PLACE ORDER </button><br></a>
+                <a href="{% url 'orders:createorder' %}"><button class="btn btn-success" style="width: 80%; margin: 0 10%;" onclick="return confirm('Are you sure you want to place the order?')"> PLACE ORDER </button><br></a>
                 <br>
                 <br>
             
