--- a/ecommerce/templates/orders/myorders.html
+++ b/ecommerce/templates/orders/myorders.html
@@ -108,7 +108,7 @@ Product-Home
 {% block body %}
 
         <br>
-        <h1 id="top-section" style="align-items: center;"> Welcome , {{user.username}}!!</h1> 
+        <h1 id="top-section" style="align-items: center;"> {{user.username}}!!</h1> 
         <br>
         <form action = " {% url 'homepage:home' %}" enctype="multipart/form-data" method="POST">
             <div class="container sign-form">
@@ -180,7 +180,7 @@ Product-Home
                                     
                                     {% if corres_pdts.order.orderid == order.orderid %}
                                         <a href="{% url 'products:home' corres_pdts.product.productid  %}">
-                                            <img style = " height: 50px; width: 80px; margin:10px" src={{corres_pdts.product.picture.url}} alt="broken">
+                                            <img style = " height: 100px; width: 120px; margin:10px" src={{corres_pdts.product.picture.url}} alt="broken">
                                         </a>
                                         
                                     {% endif %}
