--- a/ecommerce/templates/product/producthome.html
+++ b/ecommerce/templates/product/producthome.html
@@ -98,9 +98,6 @@ Product-Home
 
 <div class="container">
 {% block body %}
-
-        <br>
-        <h1 id="top-section" style="align-items: center;"> Welcome , {{user.username}}!!</h1> 
         <br>
         <form action = " {% url 'homepage:home' %}" enctype="multipart/form-data" method="POST">
             <div class="container sign-form">
@@ -162,7 +159,7 @@ Product-Home
                             
                             <b>productname :</b> <h1 style="text-transform: capitalize;">{{product.productname}}</h1>
                             <br>
-                            <b>productid:</b> <h1>{{product.productid}}</h1>                            
+                            <b>productid:</b> <h1>{{product.productid}}</h1>                          
                             <b>product price :</b> <h1>{{product.unit_price}}</h1>
                             <b>product stock :</b> <h1>{{product.instock}}</h1>
                             
@@ -281,7 +278,7 @@ Product-Home
 
             <br><br>
 
-                <h1>Reviews : </h1><br>
+                <h1>Leave a Review : </h1><br>
                 <form action = " {% url 'reviews:review' product.productid %}" enctype="multipart/form-data" method="POST">
                     <div class="reviewform">
                         {% csrf_token %}
@@ -304,7 +301,8 @@ Product-Home
                     <input type="submit" class = 'btn btn-outline-secondary' name="submit" value="Submit">
                 </form>
                 <br><br>
-
+                <br>
+                <h1>Reviews : </h1><br>
                 {% if pdtreviews %}
                     <div class="container" >
                         <div class="user-review">
@@ -383,7 +381,7 @@ Product-Home
                                     <h6><strong>Product : {{rpdt.productname}} - {{rpdt.created_at}}</strong></h6>
                                     <hr></a>
         
-                                    <a href="{% url 'products:addtocart' rpdt.productid %}"><button  class="btn btn-outline-secondary add-btn">Add to Cart</button></a>
+                                    <a href="{% url 'products:addtocart' rpdt.productid %}"><button  class="btn btn-outline-secondary add-btn" >Add to Cart</button></a>
                                     <a class="btn btn-outline-success" href="{% url 'products:home' rpdt.productid %}">View</a>
                                     <h4 style="display: inline-block; float: right"><strong>₹{{rpdt.unit_price}}</strong></h4>
         
