added brand image

--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -392,3 +392,7 @@ fieldset, label { margin: 0; padding: 0; }
 	text-transform: uppercase;
 	font-size: large;
 }
+
+.test:hover{
+	transform: scale(1.1);
+}
