--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -23,7 +23,12 @@
 
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
         <nav class="navbar navbar-expand-lg" style="background-color: #485e79;">
-        <a class="navbar-brand" href="{% url 'homepage:home' %}"> <h1 style="font-family: comicsans; color: white;" >SHOPオンライン</h1></a>
+        <!-- <a class="navbar-brand" href="{% url 'homepage:home' %}"> <h1 style="font-family: comicsans; color: white;" >サンギート</h1></a> -->
+        <a class="navbar-brand" href="{% url 'homepage:home' %}">
+            <img src="{% static 'brand.jpg'%}" width="200px" height = "100px"  alt="broken" style="border: 3px solid white; float: left;">
+            <h3 style="float: right; font-size: 60px; margin-left: 20px;　font-family: comicsans; color: white;" >  サンちゃん </h3>
+        </a>
+
         <button class="navbar-toggler btn-secondary" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span><i class="fa fa-bars"> MENU </i>
