made login fields required true

--- a/ecommerce/templates/registration/signin.html
+++ b/ecommerce/templates/registration/signin.html
@@ -41,7 +41,7 @@
                                 </div>
 
                                 <div class="col-md-8">
-                                    <h3><input type="text" name = "username" placeholder="Enter the Username "  ></h3>
+                                    <h3><input type="text" name = "username" placeholder="Enter the Username " required = "true" ></h3>
                                 </div>
                             </div>
 
@@ -57,7 +57,7 @@
                                 </div>
 
                                 <div class="col-md-8">
-                                    <h3><input type="password" name = "password" placeholder="enter the password "  ></h3>
+                                    <h3><input type="password" name = "password" placeholder="enter the password " required = "true"  ></h3>
                                 </div>
                             </div>
                             
