adding link between sign in and signup pages

--- a/ecommerce/templates/registration/signin.html
+++ b/ecommerce/templates/registration/signin.html
@@ -65,6 +65,7 @@
         
                             <input class="btn btn-primary" type="submit" value="sign in"> 
                             <a href="{% url 'registration:change_password1' %}"><input type="button" class=" btn btn-warning " value="Forgot Password"></a>
+                            <a href="{% url 'registration:signup' %}" style = "margin-left : 15px; font-size : 20px;"> New User ? </a>
                         
                         </form>
                     </div>
