--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -22,7 +22,7 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
-        <nav class="navbar navbar-expand-lg" style="background-color: #485e79;">
+        <nav id="PAGETOP" class="navbar navbar-expand-lg" style="background-color: #485e79;">
         <!-- <a class="navbar-brand" href="{% url 'homepage:home' %}"> <h1 style="font-family: comicsans; color: white;" >サンギート</h1></a> -->
         <a class="navbar-brand" href="{% url 'homepage:home' %}">
             <img src="{% static 'brand.jpg'%}" width="200px" height = "100px"  alt="broken" style="border: 3px solid white; float: left;">
