--- a/ecommerce/templates/landing/end.html
+++ b/ecommerce/templates/landing/end.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="container" style="color: white; text-align: center;">
         <br><br>
-        <a href="#top-section"><button class="btn btn-light" style="border: 0.5px solid #ffbb33;"> MOVE TO TOP </button></a>
+        <a href="#PAGETOP"><button class="btn btn-light" style="border: 0.5px solid #ffbb33;"> MOVE TO TOP </button></a>
         <br><br>
     </div>
 </div>
