added login help text in japanese

--- a/ecommerce/templates/registration/signin.html
+++ b/ecommerce/templates/registration/signin.html
@@ -71,6 +71,15 @@
                     </div>
                 </div>
 
+                <br>
+                <div class="help jumbotron" style="width: 50%; margin: 2% 25%;">
+                    <h3> 登録するか(new user)、次の資格情報を使用してログインしてください </h3>
+                    <br>
+                    <h4>ADMIN : (username: admin , pwd: admin)  *製品を追加したり、他の管理者権限を使用したりできます </h4>
+                    <h4>user : (username: test , pwd: test) *通常のユーザー権限</h4>
+                </div>
+                <br>
+
 
 
                 <div class="col-lg-1">
